	implementation and list of parameters to also receive package info
	struct and to take it into account to include its name in the
	returned string (N68825) (N68832).
	(ip_install_cur_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(ip_install_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(up_remove): Added the name of the application to the string shown
	when uninstalling a package is not possible (N68850).

	* src/util.cc (entertainment_insensitive_press): Replaced
	hardcoded string with the right l10n logical id (N68844).

2007-09-12  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (static gboolean package_list_ready): New global
	variable to take care of the status for the first package list
	load in main function (N56637).
	(get_package_list_reply): Update the value of the new global
	variable when needed (N56637).
	(check_catalogues): Don't get catalogues if the package list is
	not ready yet (N56637).
	(rpc_show_error_report): Fixed localization issue for the continue
	button and the dialog main text (N68736).

	* src/operations.cc (ip_check_cert_reply): Fixed localization
	issue for the continue button and the dialog main text (N68736).
	(ip_abort_cur): Fixed localization issue for the continue button
	and the dialog main text (N68736).

	* src/apt-worker.cc (operation): Fixed a bug that made the
	installation of certain packages to kill the apt-worker.

2007-09-11  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (reset_cat_list): Fixed a mistake using delete when
	g_free was the right choice. Removed gtk_list_store_clear to avoid
	a problem later reading an already freed memory block from
	emit_row_signal (N67698).
	(set_cat_list): Added gtk_list_store_clear here to clear the list
	(if needed) when setting a new GtkListStore (N67698).

2007-09-10  Mario Sanchez Prada  <msanchez@maemo.org>

	Done some changes to the smart download location choosing
	implementation:
